# app/Models/SubService.php
@@ -1,0 +1,22 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class SubService extends Model
+{
+    use HasFactory;
+    protected $fillable = [
+        "name",
+        "description",
+
+        "service_id"
+        // "is_active",
+
+    ];
+    public function service(){
+        return $this->belongsTo(Service::class,'id', 'service_id');
+    }
+}
